fix: prevent jumping field

--- a/packages/ui/src/components/va-input/components/VaInputWrapper/_variables.scss
+++ b/packages/ui/src/components/va-input/components/VaInputWrapper/_variables.scss
@@ -4,6 +4,7 @@
   --va-input-wrapper-background: var(--va-input-color);
   --va-input-wrapper-background-opacity: 1;
   --va-input-wrapper-border-color: var(--va-input-bordered-color);
+  --va-input-wrapper-min-width: 280px;
 
   /* Counter container */
   --va-input-wrapper-bottom-display: flex;
